Sticky scrolling menu. Fixed navigation text size. Made it more readable, size-wise.

--- a/themes/foulab-2018/static/css/default/app.css
+++ b/themes/foulab-2018/static/css/default/app.css
@@ -1,7 +1,8 @@
 /* foulab.org - default style */
 
 /* Header of the page */
-.header {
+.header
+{
     position: relative;
     width: 880px;
     height: 168px;
@@ -15,7 +16,8 @@
     padding-right: 15px;
 }
 
-#gl_canvas {
+#gl_canvas
+{
     width: 895px;
     height: 168px;
     position: absolute;
@@ -25,13 +27,19 @@
     visibility: hidden;
 }
 
-#gl_canvas_bg {
+#gl_canvas_bg
+{
     width: 100%;
     height: 100%;
     position: fixed;
     left: 0px;
     top: 0px;
     z-index: -5;
+}
+
+#slider {
+    position: sticky;
+    top: 0px;
 }
 
 /* Links below the header */
@@ -46,11 +54,14 @@
     z-index: 2;
 }
 
-.tinybar span a:active, span a:link, span a:visited, span a:active, span a:link, span a:visited {
+.tinybar span a:active, span a:link, span a:visited
+{
     color: white;
     font-weight: normal;
-    font-size: 8pt;
+    font-size: 18px;
     text-decoration: none;
+    padding: 0px 0px 0px 0px;
+    margin: 0px 0px 0px 0px;
 }
 
 .wrapper {
@@ -72,7 +83,7 @@
     padding: 10px;
     border: solid #22180b;
     border-width: 0 0 0 0;
-    font-size: 10pt;
+    font-size: 10px;
     text-align: left;
     min-height: 500px;
 }
@@ -92,7 +103,7 @@
 {
     color: white;
     font-weight: normal;
-    font-size: 8pt;
+    font-size: 12pt;
     text-decoration: none;
 }
 
